[gd_scene load_steps=2 format=3 uid="uid://h6o64owkigse"]

[ext_resource type="Script" path="res://end_game_menu.gd" id="1_4wcst"]

[node name="End_game_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wcst")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -46.5
offset_right = 28.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score: "

[node name="score" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Time: "

[node name="timer" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="retry_button" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Retry"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="main_menu_button" type="Button" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Main menu"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="exit_button" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/retry_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/retry_button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer5/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/exit_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/exit_button" to="." method="_on_exit_button_pressed"]
